--- a/index.html
+++ b/index.html
@@ -119,35 +119,45 @@
 </section>
 
  <section id="testimonios" class="py-20 px-6 md:px-16 bg-indigo-50">
-  <div class="max-w-4xl mx-auto text-center">
+  <div class="max-w-6xl mx-auto text-center">
     <h2 class="text-4xl font-bold mb-12 text-indigo-700">Testimonios</h2>
-    <div class="space-y-10">
-      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
-        <p class="text-lg italic">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”</p>
-        <footer class="mt-4 text-right font-semibold text-indigo-700">– Marta G. (Madrid)</footer>
-      </blockquote>
-      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
-        <p class="text-lg italic">“El ritual para soltar a mi ex fue muy sanador. Me sentí acompañada, comprendida y guiada en todo momento.”</p>
-        <footer class="mt-4 text-right font-semibold text-indigo-700">– Andrea L. (Valencia)</footer>
-      </blockquote>
-      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
-        <p class="text-lg italic">“Nunca había sentido tanta paz después de una lectura. Fue honesta, cariñosa y certera.”</p>
-        <footer class="mt-4 text-right font-semibold text-indigo-700">– Carmen R. (Barcelona)</footer>
-      </blockquote>
-      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
-        <p class="text-lg italic">“Pensé que era imposible volver a confiar en el amor, pero tras la consulta y el ritual empecé a sanar por dentro.”</p>
-        <footer class="mt-4 text-right font-semibold text-indigo-700">– Laura P. (Sevilla)</footer>
-      </blockquote>
-      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
-        <p class="text-lg italic">“Me sentí escuchada y comprendida. No fue solo tarot, fue una experiencia sanadora de verdad.”</p>
-        <footer class="mt-4 text-right font-semibold text-indigo-700">– Nuria F. (Bilbao)</footer>
-      </blockquote>
-      <blockquote class="bg-white shadow-lg rounded-2xl p-8 text-left border-l-4 border-indigo-400">
-        <p class="text-lg italic">“El enfoque de Luna es muy humano. Me ayudó a cortar con energías del pasado y a abrirme de nuevo a la vida.”</p>
-        <footer class="mt-4 text-right font-semibold text-indigo-700">– Julia M. (Alicante)</footer>
-      </blockquote>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <p class="italic">“Luna me ayudó a salir de un momento de mucha confusión sentimental. Gracias a ella pude tomar decisiones con claridad.”</p>
+        <p class="mt-4 font-semibold text-right text-indigo-700">– Marta G. (Madrid)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <p class="italic">“El ritual para soltar a mi ex fue muy sanador. Me sentí acompañada, comprendida y guiada en todo momento.”</p>
+        <p class="mt-4 font-semibold text-right text-indigo-700">– Andrea L. (Valencia)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <p class="italic">“Nunca había sentido tanta paz después de una lectura. Fue honesta, cariñosa y certera.”</p>
+        <p class="mt-4 font-semibold text-right text-indigo-700">– Carmen R. (Barcelona)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <p class="italic">“Pensé que era imposible volver a confiar en el amor, pero tras la consulta y el ritual empecé a sanar por dentro.”</p>
+        <p class="mt-4 font-semibold text-right text-indigo-700">– Laura P. (Sevilla)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <p class="italic">“Me sentí escuchada y comprendida. No fue solo tarot, fue una experiencia sanadora de verdad.”</p>
+        <p class="mt-4 font-semibold text-right text-indigo-700">– Nuria F. (Bilbao)</p>
+      </div>
+      <div class="bg-white p-6 rounded-xl shadow-md">
+        <p class="italic">“El enfoque de Luna es muy humano. Me ayudó a cortar con energías del pasado y a abrirme de nuevo a la vida.”</p>
+        <p class="mt-4 font-semibold text-right text-indigo-700">– Julia M. (Alicante)</p>
+      </div>
+    </div>
+    <div class="mt-16">
+      <h3 class="text-xl font-semibold text-indigo-700 mb-4">¿Quieres compartir tu experiencia?</h3>
+      <form class="max-w-xl mx-auto bg-white shadow-md rounded-xl p-6 space-y-4">
+        <input type="text" placeholder="Tu nombre (opcional)" class="w-full border border-indigo-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-indigo-200">
+        <textarea placeholder="Escribe tu testimonio aquí..." rows="4" class="w-full border border-indigo-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-indigo-200"></textarea>
+        <button type="submit" class="bg-indigo-600 text-white px-6 py-2 rounded-full hover:bg-indigo-700 transition">Enviar testimonio</button>
+        <p class="text-sm text-gray-500 italic">Gracias por compartir tu experiencia. Tu testimonio será revisado y publicado próximamente.</p>
+      </form>
     </div>
   </div>
+</section>
 
 <section id="reserva" class="py-16 px-6 md:px-16">
   <div class="max-w-5xl mx-auto text-center">
